--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <main class ="main__cntnr cntnr--flx flx--clmn">
             <article class="main__user main__article">
                 <figure class ="user__profile cntnr--pddng cntnr--flx flx--rw cntnr--rltv cntnr--rds">
-                    <img class ="user__img" src="./assets/jeremy.png" alt ="image user">
+                    <img class ="user__img" src="./assets/jeremy.png" alt ="image user" loading ="lazy" draggable ="false">
                     <figcaption class ="cntnr--flx">
                         <p class ="user__report">Report for</p>
                         <h1 class ="user__name">Jeremy Robson</h1>
@@ -44,7 +44,7 @@
                     <section class ="article__dash cntnr--pddng cntnr--flx flx--jstf-cntr cntnr--rltv cntnr--rds">
                         <figure class ="cntnr--flx flx--rw flx--jstf-btwn">
                             <figcaption class ="dash__ttl"></figcaption>
-                            <img src="./assets/ellipsis.svg" alt ="icon more">
+                            <img src="./assets/ellipsis.svg" alt ="icon more" loading ="lazy" draggable ="false">
                         </figure>
                         <section class ="cntnr--flx flx--rw flx--jstf-btwn">
                             <h2 class ="dash__hours"></h2>
